# cmake_gcc

./: README.md
1_cmake_gcc_study/: CMakeLists.txt  main.c
1_cmake_gcc_study/include/: hello.h
2_cmake_lib/: CMakeLists.txt
2_cmake_lib/source/: hello.c
3_cmake_use_lib/: CMakeLists.txt
4_cmake_macro/: CMakeLists.txt  main.c
5_cmake_embed/: CMakeLists.txt
5_cmake_embed/app1/: CMakeLists.txt  app1.c
5_cmake_embed/app2/: CMakeLists.txt  app2.c
5_cmake_embed/hello/: CMakeLists.txt
5_cmake_embed/include/: sum.h
5_cmake_embed/sum/: CMakeLists.txt  sum.c
