cmake_minimum_required(VERSION 3.22)
project(cmake_gcc)
set(CMAKE_C_STANDARD 17)
aux_source_directory(${PROJECT_SOURCE_DIR} MAIN_SRC)
aux_source_directory(${PROJECT_SOURCE_DIR}/source SRC)
include_directories(${PROJECT_SOURCE_DIR}/include)
set(ALL_SRC ${MAIN_SRC} ${SRC})
add_definitions(-DNUM=3.0)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
add_executable(main ${ALL_SRC})