cmake_minimum_required(VERSION 3.22)
project(cmake_macro)
set(CMAKE_C_STANDARD 17)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(${PROJECT_SOURCE_DIR}/lib)
aux_source_directory(${PROJECT_SOURCE_DIR}/. MAIN_SRC)
link_libraries(hello)
add_definitions(-DHELLO -DNUM=2.0)
add_executable(main ${MAIN_SRC})